--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "octokit": "^4.0.2",
-    "yaml": "^2.4.3"
+    "yaml": "^2.4.3",
+    "yauzl": "^3.1.3"
   }
 }
